# terminal-ascii-art

./: Cargo.toml  README.md
src/: cli.rs  error.rs  font.rs  formatter.rs  image_renderer.rs  lib.rs  main.rs  renderer.rs  terminal.rs  video.rs
tests/: cli.rs
